--- a/client/src/components/EventDetails/eventdetails.css
+++ b/client/src/components/EventDetails/eventdetails.css
@@ -1,16 +1,34 @@
 .eventDetails {
     font-family: 'Bitter', serif;
-    font-size: 1.3rem;
+    font-size: 1.5rem;
+    color: ghostwhite;
+    background-color: rebeccapurple;
+    opacity: 95%;
 }
 
 .eventDetailsBox {
     margin: 30px;
 }
 
-/* header {
+/* .event-header {
     font-family: 'Pacifico', cursive !important;
     font-size: 30px !important;
 } */
+
+.event-header {
+    /*font-family: 'Bitter', serif !important;*/
+   font-family: 'Fugaz One', cursive !important;
+    font-size: 4rem !important;
+    font-weight: lighter !important;
+    color: ghostwhite !important;
+    background-color: rebeccapurple;
+    opacity: 95%;
+    max-width: 125rem;
+}
+
+.eventDetails-edit {
+    margin-left: 20px !important;
+}
 
 
 /*font-family: 'Bitter', serif;*/
