--- a/client/src/containers/App/app.css
+++ b/client/src/containers/App/app.css
@@ -1,39 +1,130 @@
-.hero {
-    position: relative;
-    margin-top: 50px;
-}
+/*.hero {*/
+/*    position: relative;*/
+/*    margin-top: 0px;*/
+/*    opacity: 10%;*/
+/*}*/
 
 .hero-overlay {
+    margin-bottom: 200px;
     text-align: center;
-    position: absolute;
+    /*position: fixed;*/
     text-transform: uppercase;
     z-index: 0;
     width: 100%;
+
 }
 
 .hero-title {
-    font-size: 7vw;
+    font-size: 6vw;
     transform: translateY(9vw);
-    color: #ffffff;
+    color: ghostwhite;
     letter-spacing: 0.45rem;
     font-weight: 500;
-    font-family: 'Monoton', cursive;
+    /*font-family: 'Monoton', cursive;*/
+    font-family: 'Fugaz One', cursive;
+    opacity: .75 !important;
+    margin-bottom: 450px !important;
+    height: 150px;
+    width: 100vw;
+    background-color: darkslateblue;
+
+    border-radius: 15%;
+    box-shadow: 10px 5px 5px 0px rgba(0,0,0,0.85)!important;
 
 
 }
 
-.hero-image {
-    display: block;
-    overflow: visible;
-    z-index: -1;
-    margin-left: auto;
-    margin-right: auto;
-    width: 75%;
+section{
+    text-align:center;
+
+}
+.footer #button{
+
+    width:35px;
+    height:35px;
+    /*border: rebeccapurple 12px solid;*/
+    /*border-radius:35px;*/
+    margin:0 auto;
+    position:relative;
+    -webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+    transition: all 1s ease;
+    margin-bottom: 30px !important;
+
+}
+.footer #button:hover{
+    width:35px;
+    height:35px;
+    border: #3A3A3A 12px solid;
+    -webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+    transition: all 1s ease;
+    position:relative;
 
 }
 .footer {
-    background-color: #f1f1f1;
-    padding: 10px;
-    text-align: center;
+    bottom:0;
+    left:0;
+    position:fixed;
+    width: 100%;
+    height: 2em;
+    overflow:hidden;
+    margin:0 auto;
+    -webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+    transition: all 1s ease;
+    z-index:999;
+
+}
+.footer:hover {
+    -webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+    transition: all 1s ease;
+    height: 8em;
+}
+.footer #container{
+    /*margin-top:5px;*/
+    width:100%;
+    height:100%;
+    position:relative;
+    top:0;
+    left:0;
+    background-color: rebeccapurple;
+    opacity: 80%;
+}
+.footer #cont{
+    position:relative;
+    top:-45px;
+    right:190px;
+    width:150px;
+    height:auto;
+    margin:0 auto;
+}
+.footer_center{
+    width:500px;
+    float:left;
+    text-align:center;
+}
+.footer h3{
+    font-family: 'Helvetica';
+    font-size: 15px;
+    font-weight: 100;
+    margin-top:70px;
+    margin-left:40px;
+    max-width: 50rem;
+}
+
+.footer-contact {
+    color: ghostwhite;
+    /*padding-bottom: 30px;*/
+    font-size: 30px;
 
 }
