--- a/client/src/containers/CreateEvent/createevent.css
+++ b/client/src/containers/CreateEvent/createevent.css
@@ -86,4 +86,9 @@ h3, h2 {
 }
 
 
-
+/* FOR TESTING */
+/* .test {
+    border: 3px solid black;
+    background-color: orange;
+    border-radius: 30px;
+} */
