--- a/client/src/containers/MessageBoardContainer/messageboard.css
+++ b/client/src/containers/MessageBoardContainer/messageboard.css
@@ -14,15 +14,15 @@
   overflow: scroll;
   scroll-behavior: smooth !important;
   white-space: nowrap;
-  width: 800px;
+  /* width: 800px; */
   border: 20px solid #000000;
   /*overflow: hidden;*/
   /*text-overflow: ellipsis;*/
   box-shadow: 10px 5px 5px 0px rgba(0,0,0,0.95)!important;
   border-radius: 5px !important;
 /*background-color: #4CAF50 !important;*/
-  background-image: url("https://images.unsplash.com/photo-1456403935648-c7575ed02a62?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80") !important;
-  background-size: cover !important;
+
+  /*background-size: cover !important;*/
 
 }
 
@@ -30,25 +30,24 @@
 
 .message-userName {
   letter-spacing: 0.45px;
-    background-color: lightseagreen;
+    background-color: indianred;
     font-family: 'Lato', sans-serif;
+  text-transform: capitalize;
 
     /*width: 25%;*/
     /*display: block;*/
 }
 
-.message-userName {
 
-}
 
 .message-time {
 /*float: left !important;*/
-  color: white !important;
+  color: black !important;
   font-family: 'Fugaz One', cursive;
 }
 
 .ui.comments .comment .text {
-  color: white;
+  /* color: white; */
   font-family: 'Lato', sans-serif;
   font-size: 14px;
 }
@@ -56,7 +55,7 @@
 .message-posting {
   box-shadow: 10px 5px 5px 0px rgba(0,0,0,0.15)!important;
   border-radius: 25px;
-  color: white !important;
+  color: black !important;
 }
 
 
