--- a/client/src/components/EventDetails/eventdetails.css
+++ b/client/src/components/EventDetails/eventdetails.css
@@ -3,7 +3,7 @@
     font-size: 1.5rem;
     color: ghostwhite;
     background-color: rebeccapurple;
-    opacity: 95%;
+    /* opacity: 95%; */
 }
 
 .eventDetailsBox {
@@ -22,7 +22,7 @@
     font-weight: lighter !important;
     color: ghostwhite !important;
     background-color: rebeccapurple;
-    opacity: 95%;
+    /* opacity: 95%; */
     max-width: 125rem;
 }
 
